[package]
name = "cosmac_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmac_sim_macros = {path = "./cosmac_sim_macros"}
anyhow = "1.0.72"
clap = "4.3.19"
clap-repl = "0.1.0"
itertools = "0.11.0"
rand = "0.8.5"
ctrlc = "3.4.1"
