[package]
name = "cosmac_emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmac_emu_macros = {path = "./cosmac_emu_macros"}
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
clap-repl = "0.1.0"
itertools = "0.11.0"
rand = "0.8.5"
ctrlc = "3.4.1"
byte-unit = "5.1.4"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
nom = { version = "7.1.3", features = ["alloc"] }
parse_duration = "2.1.1"
