[workspace]
resolver = "2"
members = [ "cosmac_*" ]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
repository = "https://github.com/gasmith/cosmac_emu"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5.38", features = ["derive"] }
ctrlc = "3.4.1"
itertools = "0.14.0"
rand = "0.9.1"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.12"
tracing = "0.1.41"
